--- a/template/input.html
+++ b/template/input.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
+{% load static %}
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
-
+    <link rel="stylesheet" href="{% static "css/input.css" %}">
     <title>Input Form</title>
     <style media="screen">
       html,body{
@@ -13,21 +14,47 @@
   </head>
   <body style="box-shadow:inset 0 0 5rem rgba(0, 0, 0);background-color:#4a4848">
     <nav class="navbar navbar-dark bg-dark" style="margin-bottom:1em">
-      <a class="navbar-brand" href="#">Home</a>
+      <a class="navbar-brand" href="{% url 'index'%}">Home</a>
     </nav>
-    <div class="container">
-        <div class="form-group">
-          <label for="exampleInputEmail1">Email address</label>
-          <input type="text" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
-          <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
-        </div>
-        <div class="form-group">
-          <label for="exampleInputPassword1">Password</label>
-          <input type="text" class="form-control" id="exampleInputPassword1">
-        </div>
-        <a href="{% url 'mainapp:result' %}"><button type="submit" class="btn btn-primary">Submit</button></a>
+    <div  id="particles-js">
+      <div style="position:absolute;left:50%;margin-left:-555px;padding-top:5em;background-color:rgba(138, 131, 131, 0.3);padding:1em;border-radius: 25px;" class="container">
+        <div class="form-row">
+            <div class="col">
+              <label for="origincountry">Origin Country</label>
+              <input type="text" id="origincountry" class="form-control" placeholder="Origin Country name">
+            </div>
+            <div class="col">
+              <label for="origincode">Airport Code</label>
+              <input type="text" id="origincode" class="form-control" placeholder="Airport Code">
+            </div>
+          </div>
+          <div class="form-row">
+              <div class="col">
+                <label for="destcountry">Destination Country</label>
+                <input type="text" id="destcountry" class="form-control" placeholder="Destination Country name">
+              </div>
+              <div class="col">
+                <label for="destcode">Airport Code</label>
+                <input type="text" id="destcode" class="form-control" placeholder="Airport Code">
+              </div>
+            </div>
+            <div style="width:50%;margin:auto;" class="form-group">
+    <label for="formGroupExampleInput">Departure Date</label>
+    <input type="text" class="form-control" id="formGroupExampleInput" placeholder="yyyy-mm-dd">
+  </div>
+  <div class="row">
+    <a style="margin:auto;text-align:center;margin-top:1em;" href="{% url 'mainapp:result' %}"><button type="submit" class="btn btn-primary">Submit</button></a>
+  </div>
+
+
+      </div>
+
 
     </div>
 
+
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
+    <script type="text/javascript" src="https://threejs.org/examples/js/libs/stats.min.js"></script>
+    <script type="text/javascript" src="{% static "js/input.js" %}"></script>
   </body>
 </html>
